[package]
name = "text2svg"
authors = ["tizee"]
version = "0.2.0"
description = "A command line tool help convert text to svg file"
readme = "README.md"
homepage = "https://github.com/tizee/text2svg"
repository = "https://github.com/tizee/text2svg"
license = "MIT"
edition = "2021"
keywords = ["cli","svg","tool"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
font-kit = "0.14.2"
resvg = "0.45.0"
rustybuzz = "0.20.1"
svg = "0.18.0"
syntect = "5.1.0"
